Added Role model to create authorisation on many to many logic using model association

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PORT=3001
 JWT_SECRET=YourNewSecretValue
- userEmail=sandeep.iiit2022@gmail.com
- pass=ocet lxgh euej zace
+userEmail=sandeep.iiit2022@gmail.com
+pass=ocet lxgh euej zace
+DB_SYNC=true
